# el-hub

./: .gitignore  CLAUDE.md  README.md  hub.py  hub_auth.py  proc_state.py  pyproject.toml  secure_store.py  wordcount.py
backup-tool/: CLAUDE.md  README.md  config.json  main.py  pyproject.toml  requirements.txt  todo.txt
backup-tool/app/: __init__.py  backup_engine.py  config.py  errors.py  gdrive.py  logger.py  runtime_state.py  watcher.py
backup-tool/app/ui/: __init__.py  main_window.py  main_window_backup.py  palette.py  signals.py  style.py
elhub_ui/: __init__.py  components.py  config.py  dialogs.py  fonts.py  icons.py  palette.py  style.py
error_list_dist/: CLAUDE.md  README.md  error_list_auto_classify.py  error_list_auto_classify_분석.md  error_list_gui.py  pyproject.toml
error_list_dist/gui/: __main__.py  app.py  dialogs.py  palette.py  paths.py  style.py  utils.py  worker.py
scrape_dist_app/: .gitignore  CLAUDE.md  README.md  config.json  new_gui_app.py  pyproject.toml
scrape_dist_app/common/: constants.py  logger.py  pipeline.py  pipeline_without_diff.py  utils.py
scrape_dist_app/core/: __init__.py  design_core.py  diff_core.py  dist_core.py  scrape_core.py  secure_token.py
scrape_dist_app/gui/: __init__.py  app.py  config.py  dialogs.py  fonts.py  palette.py  paths.py  style.py  utils.py  worker.py
